<resources>
    <string name="app_name">Compra-Venta</string>
    <string name="label_titulo">Título</string>
    <string name="edit_titulo">Título...</string>
    <string name="label_descripcion">Descripción (opcional)</string>
    <string name="edit_descripcion">Descripción del producto...</string>
    <string name="label_email">Correo de contacto</string>
    <string name="edit_email">Correo electrónico...</string>
    <string name="label_precio">Precio</string>
    <string name="edit_precio">Precio...</string>
    <string name="label_categoria">Categoría</string>
    <string-array name="array_categoria">
        <item>Indumentaria</item>
        <item>Electrónica</item>
        <item>Entretenimiento</item>
        <item>Jardín</item>
        <item>Vehículos</item>
        <item>Juguetes</item>
    </string-array>
    <string name="nombre_switch">Ofrecer descuento de envío</string>
    <string name="CheckBox_retiroEnPersona">Retiro en persona</string>
    <string name="label_direccion">Direccion de retiro</string>
    <string name="edit_direccion">Direccion de retiro...</string>
    <string name="checkbox_terminos">Aceptar términos y condiciones</string>
    <string name="publicar">PUBLICAR</string>
    <string name="label_porcentaje">"0"</string>





</resources>